@@ -1,4 +1,6 @@
 -----------------------------------------------------------------------------------------------------------------------
+we have lost the 7px 'red edge' showing when a dch is outside the box,  gotta find/fix that
+-----------------------------------------------------------------------------------------------------------------------
 -----------------------------------------------------------------------------------------------------------------------
 -----------------------------------------------------------------------------------------------------------------------
 -----------------------------------------------------------------------------------------------------------------------
