@@ -1,6 +1,4 @@
 
-in (and around) fem_core_IndexVieHandler.js:699  function onGetDoc(pkt,context)
-
 RSTODO rework FG.DocAttacher such that it builds the _s_sysDiv frames but inserts a 'loading...' msg into each one
 and then fires requests to the server for all the dchData needed to fill them.
 then one-by-one we populate as they arrive
@@ -26,8 +24,6 @@ but it will be impossible to 'copy/paste' using the new lazyloader so we may nee
     (this opens up a new door, we could link two dch's to the same dchData rec!)
 
 WS.clearBatchExpect() and WS.clearExpectByName("GetDoc")  should be called from FG.clearDoc/FG.newDoc 
-
-
 -----------------------------------------------------------------------------------------------------------------------
 we have an idea how we could undo/redo at least in part with the dcw level stuff, pushing/storing positons, sizes, etc
 and even the adding/deleting and zX/zY should work (although since zX/zY is part of the dch, not dcw, ...thinkaboutit)
