@@ -1,7 +1,10 @@
 2025-06- ------------------------------------------------------------------------------------------------------------
 2025-06- ------------------------------------------------------------------------------------------------------------
 2025-06- ------------------------------------------------------------------------------------------------------------
-2025-06- ------------------------------------------------------------------------------------------------------------
+2025-06-11 ------------------------------------------------------------------------------------------------------------
+* contextmenus now work again, alt+shift drag/resize works, alt++shift+z drag zX/Y works, but the 'red edge' showing
+    a dcw is not completely within the BOX is not working
+
 2025-06-10 ------------------------------------------------------------------------------------------------------------
 * changed DCW_ShadowRect to DCW_BASE as all 'shadow' ops are subfunctions added /after/ the dch is known.
 * finally got some visual action working again. dch's now load and display but the rest of the system is still borked
